[AOT][JVMCI] Incorrect usage of INCLUDE_JVMCI and INCLUDE_AOT

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: 10, 11
    • Component/s: hotspot
    • b13

      Stefan Karlsson wrote:
      While preparing my patch to conditionally compile GCs, I see that there are some incorrect usages of INCLUDE_xxx checks in the Compiler code:
      ```$ grep -r "ifdef INCLUDE" src/hotspot/
      src/hotspot/share/utilities/macros.hpp:#ifdef INCLUDE_AOT
      src/hotspot/share/runtime/deoptimization.cpp:#ifdef INCLUDE_JVMCI
      src/hotspot/share/runtime/java.cpp:#ifdef INCLUDE_JVMCI```
      and:
      ```$ grep -r "ifndef INCLUDE" src/hotspot/
      ...
      src/hotspot/share/runtime/deoptimization.cpp:#ifndef INCLUDE_JVMCI
      src/hotspot/share/runtime/deoptimization.cpp:#ifndef INCLUDE_JVMCI
      src/hotspot/share/runtime/deoptimization.cpp:#ifndef INCLUDE_JVMCI```

      AFAICT, this is incorrect because ifdef INCLUDE_JVMCI will be true when INCLUDE_JVMCI is set to 0.

            Assignee:
            Vladimir Kozlov
            Reporter:
            Vladimir Kozlov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: